gap is fixed between buttons

--- a/static/land.css
+++ b/static/land.css
@@ -93,6 +93,7 @@ strong {
     width: 90%;
     max-width: 30rem;
     display: flex;
+    gap: 10px;
 }
 
 .overlay__btn {
